# mgnn-api

./: Cargo.toml  nixpacks.toml  test.json
migrations/: 001_full_schema.sql
src/: config.rs  error.rs  extractors.rs  lib.rs  main.rs  router.rs  state.rs
src/modules/: mod.rs
src/modules/admin/: mod.rs
src/modules/analytics/: mod.rs
src/modules/audit/: mod.rs
src/modules/communication/: mod.rs
src/modules/consent/: mod.rs
src/modules/content/: mod.rs
src/modules/events/: mod.rs
src/modules/flags/: mod.rs
src/modules/identity/: mod.rs
src/modules/jobs/: mod.rs
src/modules/localization/: mod.rs
src/modules/media/: mod.rs
src/modules/organization/: mod.rs
src/modules/permission/: mod.rs
src/modules/profile/: mod.rs
src/modules/recommendation/: mod.rs
src/modules/relationship/: mod.rs
src/modules/search/: mod.rs
src/modules/settings/: mod.rs
src/modules/trust/: mod.rs
