[package]
name = "mgn-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4.45"
argon2 = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.22"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
